@@ -1,9 +1,15 @@
+API CHANGES in matplotlib-0.70.2
+   
+   builtin min(), max(), round(), abs(), sum() functions no longer
+   overridden upon "from pylab import *"
+
 API CHANGES in matplotlib-0.70
 
    MplEvent factored into a base class Event and derived classes
    MouseEvent and KeyEvent
 
    Removed definct set_measurement in wx toolbar
+
 API CHANGES in matplotlib-0.65.1
 
   removed add_axes and add_subplot from backend_bases.  Use
